@@ -1,5 +1,6 @@
 <div id="module_header">
 	<h1>Add Images &amp; Files</h1>
+	<div class="message">{msgGet()}</div>
 </div>
 
 <div id="alertNotFinished" class="hide">{translate(#Please wait until upload is finished#)}</div>
